custom layout bones

--- a/index.html
+++ b/index.html
@@ -15,181 +15,216 @@
 
 <body>
 
-  <div class="container center-block">
+  <div class="wrapper">
+    <div class="container-flex">
 
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <div class="jumbotron">
+        <div class="container panel">
+          <div class="row row-flex">
+
+
+            <div id="hero" class="col-lg-6 col-md-6 col-sm-12">
+              <div class="hero">
+                <h1></h1><br>
+                <img class="img-responsive img-thumbnail img-circle" src="images/headshot.jpg">
+              </div>
+            </div>
+
+
+
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="bio">
+                <h1 class="text-center">Manvir Brar</h1>
+                <h2 class="text-center text-muted">Devops Engineer</h2>
+                <p class="text-center text-muted"><b>University of Portsmouth</b></p>
+                <p class="text-center text-muted"><b>BSc Economics, Finance and Banking 2:1</b></p>
+                <p class="lead text-center">Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia. Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed
+                  auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
+                <p class="lead text-center">Maecenas mattis nunc mauris, id vulputate lorem egestas ac. In quis ante elit. Curabitur blandit arcu cursus, eleifend tellus ut, cursus felis. Mauris sit amet placerat lacus, sit amet interdum dolor. Pellentesque viverra volutpat rutrum.
+                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.<br><a class="btn btn-primary btn-lg" href="#navbar" role="button">Learn more</a></p>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+
+
+
+      <div>
+        <nav class="navbar navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img class="responsive" alt="sg logo" src="./images/sglogo.png"></img></a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="./index.html">Profile</a></li>
-            <li><a href="./projects.html">Projects</a></li>
-            <li><a href="https://www.spartaglobal.com/">Sparta Global</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+              <a class="navbar-brand" href="#"><img class="responsive" alt="sg logo" src="./images/sglogo.png"></img></a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="./index.html">Profile</a></li>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="https://www.spartaglobal.com/">Sparta Global</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li class="dropdown-header">Nav header</li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                  </ul>
+                </li>
               </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div><!--/.container-fluid -->
-    </nav>
+              <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
+                <li><a href="../navbar-static-top/">Static top</a></li>
+                <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+              </ul>
+            </div>
+            <!--/.nav-collapse -->
+          </div>
+          <!--/.container-fluid -->
+        </nav>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row">
+
+          <div class="col-md-12 text-center">
+            <div id="highlights" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                  <h4>Web Technology</h4>
+                  <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
+                  <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
+                </div>
+                <div class="item">
+                  <h4>Web Technology</h4>
+                  <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
+                  <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
+                </div>
+                <div class="item">
+                  <h4>Business Skills</h4>
+                  <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
+                  <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-0">
+          </div>
+
+        </div>
+      </div>
 
 
-    <div class="row">
-      <div id="hero" class="col-md-6 col-sm-12">
-        <div id="bio">
-          <div id="headshot">
-            <img class="img-responsive img-thumbnail img-circle" src="images/headshot.jpg">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-sm-4">
+            <h3>Additional Skills</h3>
+            <ul>
+              <li>Project management</li>
+              <li>Managing a team</li>
+              <li>Managing expectations of key stakeholders</li>
+              <li>Managing workload of junior team members</li>
+              <li>Advanced Microsoft excel/PowerPivot user</li>
+              <li>Presentation skills</li>
+              <li>Intermediate Java</li>
+              <li>IPA effectiveness award (econometric modelling) - MediaCom</li>
+              <li>Most ready to market award – IPG hackathon – UM International</li>
+              <li>Mediacom award for best use of econometrics in an ISU group - University of Portsmouth</li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-4">
+            <h3>Employment History</h3>
+
+            <h5>Company</h5>
+            <small>Jan 2006 - May 2019</small>
+
+            <h5>Company</h5>
+            <small>Jan 2006 - May 2019</small>
+
+            <h5>Company</h5>
+            <small>Jan 2006 - May 2019</small>
+          </div>
+          <div class="col-md-4 col-sm-4">
+            <h3>Education</h3>
+
+            <h4>University of Surrey, Electronic Engineering, 2002 - 2005 </h4>
+            <h5>Year 1</h5>
+            <ul>
+              <li>List your modules</li>
+              <li>List your modules</li>
+              <li>List your modules</li>
+            </ul>
+
+            <h5>Year 2</h5>
+            <ul>
+              <li>List your modules</li>
+              <li>List your modules</li>
+              <li>List your modules</li>
+            </ul>
+
+            <h5>Year 3</h5>
+            <ul>
+              <li>List your modules</li>
+              <li>List your modules</li>
+              <li>List your modules</li>
+            </ul>
+
+            <h5>Final Project</h5>
+            <p>Explain your final project and your part in it.</p>
           </div>
         </div>
       </div>
 
-      <div class="col-md-6 col-sm-12">
+      <div class="container-fluid text-center">
+        <div class="panel">
+          <h3>Academy Experience</h3>
 
-        <h1>Stephen Reid</h1>
-        <h2>Devops Engineer</h2>
+          <h4>Software Testing</h4>
+          <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
+          <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
 
-        <div class="university">
-          <p><b>University of Portsmouth</b></p>
-          <p><b>BSc Economics, Finance and Banking 2:1</b></p>
+          <h4>Automation</h4>
+          <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
+          <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
+
+          <h4>Agile</h4>
+          <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
+          <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
+
+          <h4>Ruby and databases</h4>
+          <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
+          <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
+
+          <h4>Devops Architectures</h4>
+          <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
+          <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
         </div>
-
-        <div class="bio">
-          <p class="lead">Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia. Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor
-            ligula in augue molestie euismod. Mauris at euismod lorem.</p>
-          <p class="lead">Maecenas mattis nunc mauris, id vulputate lorem egestas ac. In quis ante elit. Curabitur blandit arcu cursus, eleifend tellus ut, cursus felis. Mauris sit amet placerat lacus, sit amet interdum dolor. Pellentesque viverra volutpat rutrum. Class
-            aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="Panel">
-      <div class="col-md-4">
-        <div id="skills">
-          <h3>Additional Skills</h3>
-          <ul>
-            <li>Project management</li>
-            <li>Managing a team</li>
-            <li>Managing expectations of key stakeholders</li>
-            <li>Managing workload of junior team members</li>
-            <li>Advanced Microsoft excel/PowerPivot user</li>
-            <li>Presentation skills</li>
-            <li>Intermediate Java</li>
-            <li>IPA effectiveness award (econometric modelling) - MediaCom</li>
-            <li>Most ready to market award – IPG hackathon – UM International</li>
-            <li>Mediacom award for best use of econometrics in an ISU group - University of Portsmouth</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="employment-history col-md-4">
-        <h3>Employment History</h3>
-
-        <div class="employment">
-          <h5>Company</h5>
-          <small>Jan 2006 - May 2019</small>
-        </div>
-
-        <div class="employment">
-          <h5>Company</h5>
-          <small>Jan 2006 - May 2019</small>
-        </div>
-
-        <div class="employment">
-          <h5>Company</h5>
-          <small>Jan 2006 - May 2019</small>
-        </div>
-      </div>
-
-      <div>
-        <div class="col-md-4">
-          <h3>Education</h3>
-
-          <h4>University of Surrey, Electronic Engineering, 2002 - 2005 </h4>
-          <h5>Year 1</h5>
-          <ul>
-            <li>List your modules</li>
-            <li>List your modules</li>
-            <li>List your modules</li>
-          </ul>
-
-          <h5>Year 2</h5>
-          <ul>
-            <li>List your modules</li>
-            <li>List your modules</li>
-            <li>List your modules</li>
-          </ul>
-
-          <h5>Year 3</h5>
-          <ul>
-            <li>List your modules</li>
-            <li>List your modules</li>
-            <li>List your modules</li>
-          </ul>
-
-          <h5>Final Project</h5>
-          <p>Explain your final project and your part in it.</p>
-        </div>
-      </div>
-    </div>
-    <div class="container text-center">
-      <div class="row">
-        <h3>Academy Experience</h3>
-
-        <h4>Business Skills</h4>
-        <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
-        <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
-
-        <h4>Web Technology</h4>
-        <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
-        <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
-
-        <h4>Software Testing</h4>
-        <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
-        <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
-
-        <h4>Automation</h4>
-        <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
-        <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
-
-        <h4>Agile</h4>
-        <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
-        <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
-
-        <h4>Ruby and databases</h4>
-        <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
-        <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
-
-        <h4>Devops Architectures</h4>
-        <p>Fusce eget velit ut tellus congue efficitur ut pellentesque ante. Nullam fermentum libero ut ex elementum, vel laoreet velit lacinia.</p>
-        <p>Pellentesque posuere ut nibh sed lacinia. Sed bibendum porta odio, et volutpat massa auctor ornare. Sed auctor ligula in augue molestie euismod. Mauris at euismod lorem.</p>
       </div>
     </div>
   </div>
-
-
 
 </body>
 
