--- a/projects.html
+++ b/projects.html
@@ -52,8 +52,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./index.html">Profile</a></li>
-            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./index.html">Profile</a></li>
+            <li class="active"><a href="./projects.html">Projects</a></li>
             <li><a href="https://www.spartaglobal.com/">Sparta Global</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
