--- a/index.html
+++ b/index.html
@@ -131,103 +131,97 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="panel">
-        <div class="row">
+        <div class="container-fluid">
+          <div class="row">
 
 
 
-          <div class="col-lg-4 col-md-4 col-sm-8">
-            <h3>Education</h3>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <h3>Education</h3>
 
-            <h4>University of East London, Bsc (hons) Economics, 2015 - 2018 </h4>
-            <h5>Year 1</h5>
-            <ul>
-              <li>Introduction to Economics</li>
-              <li>Quantitative Methods for Economics and Finance</li>
-              <li>Marketing Principles and Practice</li>
-              <li>The Business and Financial Environment</li>
-            </ul>
+              <h4>University of East London, Bsc (hons) Economics, 2015 - 2018 </h4>
+              <h5>Year 1</h5>
+              <ul>
+                <li>Introduction to Economics</li>
+                <li>Quantitative Methods for Economics and Finance</li>
+                <li>Marketing Principles and Practice</li>
+                <li>The Business and Financial Environment</li>
+              </ul>
 
-            <h5>Year 2</h5>
-            <ul>
-              <li>Intermediate Economic Theory and Practice</li>
-              <li>Financial Intermediation and Portfolio Management</li>
-              <li>Corporate Finance</li>
-              <li>International Political Economy</li>
-              <li>International Trade</li>
-              <li>Introduction to Econometrics</li>
+              <h5>Year 2</h5>
+              <ul>
+                <li>Intermediate Economic Theory and Practice</li>
+                <li>Financial Intermediation and Portfolio Management</li>
+                <li>Corporate Finance</li>
+                <li>International Political Economy</li>
+                <li>International Trade</li>
+                <li>Introduction to Econometrics</li>
 
-            </ul>
+              </ul>
 
-            <h5>Year 3</h5>
-            <ul>
-              <li>Investment Game</li>
-              <li>The Business Professional</li>
-              <li>Public Finance, Applied Econometrics</li>
-              <li>International Finance</li>
-              <li>Innovation and the Sustainable Organization</li>
-            </ul>
+              <h5>Year 3</h5>
+              <ul>
+                <li>Investment Game</li>
+                <li>The Business Professional</li>
+                <li>Public Finance, Applied Econometrics</li>
+                <li>International Finance</li>
+                <li>Innovation and the Sustainable Organization</li>
+              </ul>
 
-            <h5>Final Project</h5>
-            <p>Explain your final project and your part in it.</p>
-          </div>
+              <h5>Final Project</h5>
+              <p>Explain your final project and your part in it.</p>
+            </div>
 
-          <div class="col-md-4 col-sm-0">
-            <h3>Employment History</h3>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <h3>Employment History</h3>
 
-            <h4>University of East London</h4>
-            Mar 2018 - Jun 2018
-            <ul>
-              <li>Researching postgraduate international business management courses available nationwide, researching and developing attributes which can be used to improve the course during revalidation.</li>
-              <li>Presenting to postgraduate students regarding course guidelines and support to increase their chances of success.</li>
-            </ul>
+              <h4>University of East London</h4> Mar 2018 - Jun 2018
+              <ul>
+                <li>Researching postgraduate international business management courses available nationwide, researching and developing attributes which can be used to improve the course during revalidation.</li>
+                <li>Presenting to postgraduate students regarding course guidelines and support to increase their chances of success.</li>
+              </ul>
 
-              <h4>University of East London</h4>
-              Nov 2016 - May 2018
-            <ul>
-              <li>Developing and leading sessions for 16 to 18 year old business students.</li>
-              <li>Lead ambassador at University of East London open days, offer holders days, UCAS and careers fairs.</li>
-            </ul>
+              <h4>University of East London</h4> Nov 2016 - May 2018
+              <ul>
+                <li>Developing and leading sessions for 16 to 18 year old business students.</li>
+                <li>Lead ambassador at University of East London open days, offer holders days, UCAS and careers fairs.</li>
+              </ul>
 
-              <h4>Jewson</h4>
-              Dec 2012 - Oct 2019
-            <ul>
-              <li>Converting leads, coordinating team sales and attracting new business.</li>
-              <li>Portfolio and key account management, responsible for ensure client satisfaction.</li>
-            </ul>
+              <h4>Jewson</h4> Dec 2012 - Oct 2019
+              <ul>
+                <li>Converting leads, coordinating team sales and attracting new business.</li>
+                <li>Portfolio and key account management, responsible for ensure client satisfaction.</li>
+              </ul>
 
-              <h4>University Of East London</h4>
-              Mar 2017 - May 2017
-            <ul>
-              <li>Auditing and implementing updates on communication channels.</li>
-              <li>Revalidation of app, website and newsletter.</li>
-            </ul>
+              <h4>University Of East London</h4> Mar 2017 - May 2017
+              <ul>
+                <li>Auditing and implementing updates on communication channels.</li>
+                <li>Revalidation of app, website and newsletter.</li>
+              </ul>
 
-          </div>
+            </div>
 
-          <div class="col-md-0 col-sm-0">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <h3>Additional Skills</h3>
+              <ul>
+                <li>Project management</li>
+                <li>Managing a team</li>
+                <li>Managing expectations of key stakeholders</li>
+                <li>Managing workload of junior team members</li>
+                <li>Advanced Microsoft excel/PowerPivot user</li>
+                <li>Presentation skills</li>
+                <li>Intermediate Java</li>
+                <li>Bloomberg Market Concepts Qualification</li>
+                <li>Third Placed at University Trading Challenge</li>
+                <li>Capital Business Insights Club March 2017</li>
+              </ul>
+            </div>
 
-          </div>
-
-          <div class="col-md-4 col-sm-0">
-            <h3>Additional Skills</h3>
-            <ul>
-              <li>Project management</li>
-              <li>Managing a team</li>
-              <li>Managing expectations of key stakeholders</li>
-              <li>Managing workload of junior team members</li>
-              <li>Advanced Microsoft excel/PowerPivot user</li>
-              <li>Presentation skills</li>
-              <li>Intermediate Java</li>
-              <li>Bloomberg Market Concepts Qualification</li>
-              <li>Third Placed at University Trading Challenge</li>
-              <li>Capital Business Insights Club March 2017</li>
-            </ul>
           </div>
 
         </div>
-
       </div>
 
     </div>
