--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
       <div class="panel">
         <div class="container-fluid">
           <div class="row">
